complete city flow

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT=5000
 MONGO_URI="mongodb://localhost:27017/Louisiana"
 # MONGO_URI="mongodb+srv://albertlobo80:bukhari1331@cluster0.6qqvk.mongodb.net/Louisiana"
 JWT_SECRET=Louisiana!230@
+APP_EMAIL=jameslobo1234554321@gmail.com
+APP_PASSWORD=weak emqp lnul kvad
