--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.19",
+    "@types/nodemailer": "^7.0.3",
+    "@types/otp-generator": "^4.0.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
+    "otp-generator": "^4.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
@@ -26,6 +32,7 @@
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
