--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.19",
     "@types/nodemailer": "^7.0.3",
     "@types/otp-generator": "^4.0.2",
+    "agenda": "^5.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
