create get all entities api

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MONGO_URI="mongodb+srv://albertlobo80:bukhari1331@cluster0.6qqvk.mongodb.net/Lou
 JWT_SECRET=Louisiana!230@
 APP_EMAIL=jameslobo1234554321@gmail.com
 APP_PASSWORD=weak emqp lnul kvad
+GOOGLE_MAPS_API_KEY=AIzaSyC29cK8ZfbPVXu1qejhgrcQROTLcCy-6XQ
